--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "firebase": "^10.1.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-barcode": "^1.4.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-qr-code": "^2.0.11",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
