--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "firebase": "^10.1.0",
+    "qr-scanner": "^1.4.2",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-barcode": "^1.4.6",
