--- a/package.json
+++ b/package.json
@@ -6,16 +6,13 @@
     "@testing-library/user-event": "^14.4.3",
     "firebase": "^10.1.0",
     "qr-scanner": "^1.4.2",
-    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
-    "react-barcode": "^1.4.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-qr-code": "^2.0.11",
-    "react-qr-reader": "^3.0.0-beta-1",
-    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^3.0.4"
   },
   "scripts": {
