--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "uuidv4": "^6.2.13",
+    "uuid": "^9.0.0",
     "web-vitals": "^3.0.4"
   },
   "scripts": {
